---------------------------------------------------------------------------------------------------
Version: 0.69.64
Date: ????
  Changes:
    - Removed warning from Biofusion science.
---------------------------------------------------------------------------------------------------
Version: 0.69.63
Date: 2025-06-17
  Changes:
    - Russian locale update.
    - Added new surface conditon: Asteroid density.
    - Fixed incompatibility with Electronic Locomotives
---------------------------------------------------------------------------------------------------
Version: 0.69.62
Date: 2025-06-13
  Changes:
    - BZ mod compatibility
    - Added achievements for difficulty.
    - Added another interface for planet hoppers. He didn't like the names on the first one.
---------------------------------------------------------------------------------------------------
Version: 0.69.61
Date: 2025-06-13
  Changes:
    - Added an interface for PlanetHoppers to use to block Rubia access if you don't actually have the gear.
---------------------------------------------------------------------------------------------------
Version: 0.69.60
Date: 2025-06-11
  Changes:
    - Russian locale re-reupdated.
    - Trashsteroid character damage 280 => 300 on normal difficulty, because you really should have shields.
    - Buff sniper turret: HP 300 => 600, impact resistance 0% => 30%. This should help with setting up mining outposts.
---------------------------------------------------------------------------------------------------
Version: 0.69.59
Date: 2025-06-11
  Changes:
    - Updated list of mods that block you from Rubia postgame content.
    - Updated Russian localization, thanks to Пружинка.
---------------------------------------------------------------------------------------------------
Version: 0.69.58
Date: 2025-06-11
  Changes:
    - Lignumis compatibility
---------------------------------------------------------------------------------------------------
Version: 0.69.57